--- a/index.css
+++ b/index.css
@@ -13,61 +13,122 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 margin: 0;
 padding: 0;
-border: 0;
+/* border: 0; */
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
+
+}
+*{
+    box-sizing: border-box;
+    /* border: 1px solid grey; */
+    max-width: 100%;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
 /* All */ 
 html {
-    font-size: 10px;
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-family: 'Roboto Mono', monospace;
 }
 h1 {
-    font-family: 'Chelsea Market';
-    font-size: 3.5rem;
-    margin-bottom: 10px;
+    font-family: 'Chelsea Market', cursive;
+    font-size: 6rem;
+}
+section {
+    padding: 4% 0;
+    width: 90%;
+    margin: 0 auto;
+
 }
 /* Header */
 header {
 padding: 4% 0;
 }
-.nav-buttons{
-color: #fff;
-background-color: black;
-text-decoration: none;
-border-radius: 6px;
-font-family: 'Roboto Mono', monospace ;
-padding: 1rem;
-margin: 0 8%;
+nav {
+    padding: 2% 0;
+
+}
+nav a{
+    display: inline-block;
+    padding: 1% 0;
+    width: 10%;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    text-decoration: none;
 }
 
 .red {
 background-color: #FF764E;
-
+margin-left: 10%;
 }
 
 .blue {
 background-color: #5ED3EB;
+margin: 0 24%;
 }
 
 .yellow {
 background-color: #FFCD69;
+margin-right: 10%;
 }
 
 /* Hero Section */
+.hero {
+    position: relative;
+}
+.text, .image {
+    display: inline-block;
+}
 
-
+.image {
+width: 30%;
+}
+.image img {
+    border-radius: 50%;
+}
+.text {
+    width: 55%;
+    margin-left: 5%;
+    text-align: center;
+    line-height: 3;
+    position: absolute;
+    top: 70px;
+}
 /* Highlighted Section */
-
-
+.highlighted {
+    background-color: #DDB9A3;
+    color: #fff;
+    padding: 2%;
+}
+.highlighted p {
+    margin: 1% 0;
+}
 /* Stacked Hero Section */
+.favicon div {
+width: 30%;
+margin: 5% auto;
+}
 
+.bold {
+    font-weight: bold;
+}
+
+.bg-image {
+    background-image: url('assets/footer_img.jpg');
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    width: 100%;
+}
 
 /* Footer */
 footer {
-    padding: 3% 0;
+  background-color: #F9E7DC;
 }
